fix: add env CR_PAT

--- a/.github/workflows/karsjajobs.yml
+++ b/.github/workflows/karsjajobs.yml
@@ -26,3 +26,5 @@ jobs:
 
       - name: build-app-karsajobs
         run: ./build_push_image_karsajobs.sh
+        env:
+          CR_PAT: ${{ secrets.GITHUB_TOKEN }}
